[project]
name = "pylox"
requires-python = ">= 3.12"
dynamic = ["description", "version"]
license = { file = "LICENSE" }
readme = "README.md"
authors = [{name="Taneli"}]

[project.optional-dependencies]
dev = [
    "mypy==1.11.2",
    "black==24.8.0",
    "flake8==7.1.0",
    "Flake8-pyproject==1.2.3",
    "flake8-unused-arguments==0.0.13",
]

[project.scripts]
pylox = "pylox:main.cli"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pylox = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "pylox.version.__version__"}
description = {file = "src/pylox/DESCRIPTION"}

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.flake8]
max-line-length = 100
