[project]
name = "pylox"
requires-python = ">= 3.12"
dynamic = ["description", "version"]
license = { file = "LICENSE" }
readme = "README.md"
authors = [{name="Taneli"}]

[project.optional-dependencies]
dev = [
    "mypy==1.14.0",
    "black==24.8.0",
    "flake8==7.1.0",
    "Flake8-pyproject==1.2.3",
    "flake8-unused-arguments==0.0.13",
    "isort==5.13.2",
    "pytest==8.3.3",
]

[project.scripts]
pylox = "pylox:main.cli"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pylox = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "pylox.version.__version__"}
description = {file = "src/pylox/DESCRIPTION"}

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.flake8]
max-line-length = 100
ignore = [
    #whitespace before ':'
    "E203",
]

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100
profile = "black"
